# Build 5.10.0 Release 9/23/2022
  1. New Scriptable functions: ROOMPC and AREAPC
  2. Caravans now have their own internal Directions (fore, back, right, left, up, down)
  3. Crafting INFO feature will now give the approx. time to craft
  4. New common skill: Shrooming, for growing mushrooms/fungus
  5. Newly crafted Clan Journals now writeable only by clan role power (journal). INI updated.
  6. New clan govt roles: CREATE_LAW (for law books), and JOURNAL (for writing to journals)
  7. Clans now support mud-yearly dues
  8. New weather type: FOG, with weatheraffects support
  9. New chant: Summon Fog
 10. MUDGrinder Player Manager now links to a WhiteList editor.
 11. New spells: Greater Claireaudience, Greater Clairevoyance, Greater Scry
 12. Smelting, Wainwright, Papermaking, and Siegecrafting recipes updated
 13. New account flag: NOCHARPURGE to protect all account players
 14. New base materials/raw env resources: NICKEL, PALLADIUM, VEGETABLE
 15. New thief skills: silent wear, silent hold, silent wield
 16. ResourceOverride now has more options and applications
 17. New Zappermask flags: +-RIDE, +-FOLLOW
 18. Prop_LangTranslator now has a ridiculously expanded functionality
 19. AnimalTraining now supports mundane things like sit, kill, etc.
 20. AREAS now supports EXPLORED argument
 21. New command: ASSIST 
 22. PUSH and PULL now take a tick, and can fail from weight, but supports assist
 23. New Prayer: Eternal Item
 24. Players can now rush thier crafting, as per the new expertise, w/o learning it
 25. New Generic ability type: GenWrightSkill - for making large construction skills
 26. ShipWright, Caravan Building, and Clan Caravan Building now have editable recipes
 27. Prop_NoCraftability can now be applies to recipes, and has a zappermask.
 28. Caravan Building now has a full complete recipe set.
 29. CHANNELS command can now be used to turn all on/off at once.
 30. Suffix and Prefix Titles will automatically combine.  See help. 