@@ -5863,7 +5863,7 @@ a
 useful list of stats: LEVEL, ARMOR, DAMAGE, ATTACK, WEIGHT, HEIGHT,
 STRENGTH, INTELLIGENCE, DEXTERITY, CONSTITUTION, CHARISMA, WISDOM,
 MAXSTRENGTH, MAXINTELLIGENCE, MAXDEXTERITY, MAXCONSTITUTION,
-MAXCHARISMA, MAXWISDOM, AGE, HITS, MANA,
+MAXCHARISMA, MAXWISDOM, AGE, HITS, MANA, REJUVRATE, 
 &nbsp;MOVE, HUNGER, THIRST, FATIGUE, LEVEL, USES, SPEED, MONEY,
 QUESTPOINTS, FOLLOWERS, TRAINS, PRACTICES<br>
             </td>
