@@ -43,23 +43,28 @@ BEHAVIOR_FASTERRECOVERY=\
 Behavior   : FasterRecovery\n\r\
 Targets    : Rooms, Areas, Items, MOBs\n\r\
 Parameters : (HEALTH=[NUM BURST TICKS]) (BURST=[NUM]) (HITS=[NUM]) (MOVE=[NUM]) (MANA=[NUM])\n\r\
+Parameters : (HEALTH=[NUM]/[SKIP TICKS])\n\r\
 Example    : burst=2\n\r\
 Example    : health=5\n\r\
-Example    : hits=2\n\r\
+Example    : hits=2/5 mana=3/1\n\r\
 Example    : mana=5 hits=10\n\r\
 Example    : burst=2 health=5\n\r\
 Description: \n\r\
-This allows the room, possessed item, or ridden mob or item to give an \
-extra burst of speed to all affected mobs. The parameters are all optional.  \
-If the "health" parameter is given, then the mob will get a number of regen \
-ticks equal to the number given.  For instance, if the value is 2, then the \
-mob will regen twice per tick, a value of 3 means 3 times per tick, etc.  \
-Values of 1 or less mean no extra regen ticks.  The "burst" parameter refers \
-to bursts of extra speed to the benefiting mobs equal to the number given. \
-For instance, if the value is 2, the mob will move twice as fast per tick, \
-a value of 3 means 3 times as fast, etc.  Values of 1 or less mean normal \
-ticking applies.  Values for hits, move, and mana are similar to health, but will \
-only give a burst or rejuvenation to that particular stat.
+This allows the room, possessed item, or ridden mob or item to give a serious \
+extra burst of speed to all affected mobs, every normal tick.  This is as opposed \
+to regen rates, which is roughly once per 5 normal ticks. \n\r\
+\n\r\
+The parameters are all optional.  If the "health" parameter is given, then the mob \
+will get a number of regen ticks equal to the number given.  For instance, if the \
+value is 2, then the mob will get 1 extra regen per normal tick, a value of 3 means \
+2 extra times per tick, etc.  Values of 1 or less mean no extra regen ticks.  \
+The "burst" parameter refers to bursts of extra speed to the benefiting mobs \
+equal to the number given. \n\r\
+\n\r\
+The extra ticks of regeneration can be tempered a bit by adding a slash and a number \
+of ticks for each value.  For example, MANA=2/5 means a single extra burst of mana \
+regeneration every 5 ticks. 
+
 
 BEHAVIOR_AGGRESSIVE=\
 Behavior   : Aggressive\n\r\
