@@ -1639,7 +1639,7 @@ MAXHUNGER, MAXTHIRST, MAXFATIGUE, STRENGTH, INTELLIGENCE, DEXTERITY, \
 CONSTITUTION, CHARISMA, WISDOM, GENDER, PARALYSIS, FIRE, COLD, WATER, GAS, \
 MIND, GENERAL, JUSTICE, ACID, ELECTRICITY, POISON, UNDEAD, MAGIC, DISEASE, \
 TRAPS, MAXSTRENGTH, MAXINTELLIGENCE, MAXDEXTERITY, MAXCONSTITUTION, \
-MAXCHARISMA, MAXWISDOM, AGE, DETECTION, DOUBT, FAITH, WEIGHTADJ, \
+MAXCHARISMA, MAXWISDOM, REJUVRATE, AGE, DETECTION, DOUBT, FAITH, WEIGHTADJ, \
 LEVEL, SENSES, ARMOR, DAMAGE, ATTACK, DISPOSITION, REJUV, WEIGHT, \
 ABILITY, HEIGHT, XP (experience), XPFNL (experience for next level), and \
 XPTNL (experience to next level), QUESTPOINTS, TRAINS, PRACTICES, and any \
