@@ -382,8 +382,8 @@ disposition (see AHELP ADJDISPOSITION), level, rejuv(!NO!), \
 senses (see AHELP ADJSENSES), speed (#attacks), RONDEATH (t/f),\
 height, weight, gender, class, clstart, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) doubt faith weightadj saveblunt \
-savepierce saveslash savespells saveprayers savesongs savechants \
-critpctweapons critpctmagic critdmgweapons critdmgmagic. Ableprofs and \
+savepierce saveslash savespells saveprayers savesongs savechants rejuvrate \
+critpctweapons critpctmagic critdmgweapons critdmgmagic.  Ableprofs and \
 ablelvls is a commma-delimited list of ablityids followed by a number \
 in parenthesis to adjust proficiency or casting level by.\n\r\
 \n\r\
